fix: Patch Antigravity User-Agent to fix deprecation error
Temporary workaround for 'This version of Antigravity is no longer supported' error
when using the google-antigravity provider.

Changes:
- Dockerfile: Clone OpenClaw during build and patch User-Agent headers
  - Updates 'google-api-nodejs-client/9.15.1' to 'antigravity/1.15.8 linux/arm64'
  - Updates 'antigravity' to 'antigravity/1.15.8 linux/arm64'
- run.sh: Use bundled pre-patched source from Docker image instead of cloning at runtime
- Bump version to 0.4.1

This is a temporary fix until OpenClaw merges PR #4603 upstream.

--- a/openclaw_gateway/Dockerfile
+++ b/openclaw_gateway/Dockerfile
@@ -53,6 +53,14 @@ RUN ARCH=$(echo ${TARGETARCH:-$(uname -m)} | sed 's/aarch64/arm64/;s/x86_64/amd6
 
 WORKDIR /opt/openclaw
 
+# Clone OpenClaw and apply Antigravity fix (PR #4603)
+# Updates User-Agent header to prevent "This version of Antigravity is no longer supported" error
+RUN git clone --depth 1 https://github.com/openclaw/openclaw.git /openclaw-src \
+  && sed -i 's|"User-Agent": "google-api-nodejs-client/9.15.1"|"User-Agent": "antigravity/1.15.8 linux/arm64"|g' \
+  /openclaw-src/extensions/google-antigravity-auth/index.ts \
+  && sed -i 's|"User-Agent": "antigravity"|"User-Agent": "antigravity/1.15.8 linux/arm64"|g' \
+  /openclaw-src/src/infra/provider-usage.fetch.antigravity.ts
+
 COPY onboarding.mjs /onboarding.mjs
 COPY onboarding.html /onboarding.html
 COPY run.sh /run.sh
