feat: Add initial configuration for OpenClaw Gateway add-on.

--- a/openclaw_gateway/config.json
+++ b/openclaw_gateway/config.json
@@ -10,6 +10,7 @@
   "boot": "auto",
   "host_network": true,
   "ingress": true,
+  "ingress_port": 18789,
   "panel": true,
   "hassio_api": false,
   "homeassistant_api": false,
