--- a/openclaw_gateway/config.json
+++ b/openclaw_gateway/config.json
@@ -1,6 +1,6 @@
 {
   "name": "OpenClaw Gateway",
-  "version": "0.4.9",
+  "version": "0.4.10",
   "slug": "openclaw_gateway",
   "description": "OpenClaw Gateway (SSH-tunneled, HA add-on)",
   "url": "https://github.com/shmulik323/openclaw-ha-addon",
@@ -8,7 +8,11 @@
   "arch": ["aarch64", "armv7", "amd64"],
   "startup": "services",
   "boot": "auto",
-  "host_network": true,
+  "host_network": false,
+  "ports": {
+    "2222/tcp": 2222,
+    "8099/tcp": 8099
+  },
   "ingress": true,
   "ingress_port": 8099,
   "panel": true,
