--- a/openclaw_gateway/nginx.conf
+++ b/openclaw_gateway/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 8099;
+    listen 0.0.0.0:8099;
     
     location / {
         proxy_pass http://127.0.0.1:18789;
@@ -12,5 +12,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_read_timeout 86400;
         proxy_send_timeout 86400;
+        proxy_buffering off;
     }
 }
