--- a/openclaw_gateway/config.json
+++ b/openclaw_gateway/config.json
@@ -1,6 +1,6 @@
 {
   "name": "OpenClaw Gateway",
-  "version": "0.4.12",
+  "version": "0.4.13",
   "slug": "openclaw_gateway",
   "description": "OpenClaw Gateway (SSH-tunneled, HA add-on)",
   "url": "https://github.com/shmulik323/openclaw-ha-addon",
@@ -16,8 +16,9 @@
   "ingress": true,
   "ingress_port": 8099,
   "panel": true,
-  "hassio_api": false,
-  "homeassistant_api": false,
+  "hassio_api": true,
+  "homeassistant_api": true,
+  "auth_api": true,
   "map": ["config:rw"],
   "environment": {
     "HOME": "/config/openclaw",
@@ -33,7 +34,8 @@
     "branch": "",
     "github_token": "",
     "ssh_port": 2222,
-    "ssh_authorized_keys": ""
+    "ssh_authorized_keys": "",
+    "ha_token": ""
   },
   "schema": {
     "port": "int(1,65535)",
@@ -45,6 +47,7 @@
     "branch": "str?",
     "github_token": "password?",
     "ssh_port": "int(1,65535)",
-    "ssh_authorized_keys": "str?"
+    "ssh_authorized_keys": "str?",
+    "ha_token": "password?"
   }
 }
